--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
    <head>
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <title>SW Logo</title>
+       <title>SW Logo Lottie Animation</title>
        <style>
-           body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; }
-           #canvas3d { width: 100%; height: 100%; display: block; }
+           body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; background-color: #f0f0f0; }
+           #lottie { width: 100%; height: 100%; }
        </style>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js"></script>
    </head>
    <body>
-       <canvas id="canvas3d"></canvas>
-       <script type="module">
-           import { Application } from 'https://unpkg.com/@splinetool/runtime@0.9.493/build/runtime.js';
-           
-           const canvas = document.getElementById('canvas3d');
-           const app = new Application(canvas);
-           app.load('https://raw.githubusercontent.com/stolfrey/sw-logo/main/SW_LOGO_B.json');
+       <div id="lottie"></div>
+       <script>
+           lottie.loadAnimation({
+               container: document.getElementById('lottie'),
+               renderer: 'svg',
+               loop: true,
+               autoplay: true,
+               path: 'https://raw.githubusercontent.com/stolfrey/sw-logo/main/SW_LOGO_B.json'
+           });
        </script>
    </body>
    </html>
-
-
-
