--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <title>SW Logo Lottie Animation</title>
        <style>
-           body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; background-color: #f0f0f0; }
+           body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; background-color: transparent; }
            #lottie { width: 100%; height: 100%; }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js"></script>
